--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<head>
-  <title>Connor Casey</title>
-</head>
-<body>
-  <p>Hello world!</p>
-</body>
+<html>
+  <head>
+    <title>Connor Casey</title>
+  </head>
+  <body>
+    <p>Hello world!</p>
+  </body>
+</html>
