--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     <p>Hello world!</p>
     <p>This is my site3</p>
+    <p>This is my site3</p>
+    <p>This is my site3</p>
   </body>
 </html>
