--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="./styles/mystylesheet.css">    
     <title>Connor Casey</title>
   </head>
   <body>
-    <p>Hello world!</p>
-    <p>This is my site4</p>
+    <div class="grand-container">
+      <h1>Work In Progress, Come Back Soon!</h1>
+    </div>
 
   </body>
 </html>
