--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./styles/mystylesheet.css">    
-    <title>Connor Casey</title>
+    <title>Connor Casey Code</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/mystylesheet.css">
+    <link rel="stylesheet" href="./styles/basics.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"  
+      rel="stylesheet" 
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
+      crossorigin="anonymous"
+    >    
   </head>
   <body>
     <div class="grand-container">
-      <h1>Work In Progress, Come Back Soon!</h1>
-    </div>
+      <div class="banner-div">
+        <br>
+        <h1>Connor Casey</h1>
+        <h4 id="italic">Software Engineer | Washington, DC</h4>
 
+        <br>
+      </div>
+
+      <div class="first-div-stacks">
+        <div class="left-fe-stack">
+          
+        </div>
+
+        <div class="right-be-stack">
+
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
